exported dataframe to csv

--- a/module 1 .ipynb
+++ b/module 1 .ipynb
@@ -1887,10 +1887,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['symboling', 'normalized-losses', 'make', 'fuel-type', 'aspiration',\n",
+      "       'num-of-doors', 'body-style', 'drive-wheels', 'engine-location',\n",
+      "       'wheel-base', 'length', 'width', 'height', 'curb-weight', 'engine-type',\n",
+      "       'num-of-cylinders', 'engine-size', 'fuel-system', 'bore', 'stroke',\n",
+      "       'compression-ratio', 'horsepower', 'peak-rpm', 'city-mpg',\n",
+      "       'highway-mpg', 'price'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1904,7 +1920,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"automobile.csv\", index=Fa)"
+   ]
   },
   {
    "cell_type": "code",
