--- a/module 1 .ipynb
+++ b/module 1 .ipynb
@@ -2681,10 +2681,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 205 entries, 0 to 204\n",
+      "Data columns (total 26 columns):\n",
+      "symboling            205 non-null int64\n",
+      "normalized-losses    205 non-null object\n",
+      "make                 205 non-null object\n",
+      "fuel-type            205 non-null object\n",
+      "aspiration           205 non-null object\n",
+      "num-of-doors         205 non-null object\n",
+      "body-style           205 non-null object\n",
+      "drive-wheels         205 non-null object\n",
+      "engine-location      205 non-null object\n",
+      "wheel-base           205 non-null float64\n",
+      "length               205 non-null float64\n",
+      "width                205 non-null float64\n",
+      "height               205 non-null float64\n",
+      "curb-weight          205 non-null int64\n",
+      "engine-type          205 non-null object\n",
+      "num-of-cylinders     205 non-null object\n",
+      "engine-size          205 non-null int64\n",
+      "fuel-system          205 non-null object\n",
+      "bore                 205 non-null object\n",
+      "stroke               205 non-null object\n",
+      "compression-ratio    205 non-null float64\n",
+      "horsepower           205 non-null object\n",
+      "peak-rpm             205 non-null object\n",
+      "city-mpg             205 non-null int64\n",
+      "highway-mpg          205 non-null int64\n",
+      "price                205 non-null object\n",
+      "dtypes: float64(5), int64(5), object(16)\n",
+      "memory usage: 41.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
