--- a/Module 2 Data Wrangling.ipynb
+++ b/Module 2 Data Wrangling.ipynb
@@ -2501,7 +2501,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  data normalization\n",
+    "\n",
+    "#  process of transforming values of several variables into a smaller range."
+   ]
   },
   {
    "cell_type": "code",
@@ -2509,6 +2513,113 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  scale the columns \"length\", \"width\", and \"height\"\n",
+    "#  normalize those variables so their value ranges from 0 to 1\n",
+    "\n",
+    "# replace original value by (original value) / (maximum value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"length\"] = df[\"length\"] / df[\"length\"].max()\n",
+    "df[\"width\"] = df[\"width\"] / df[\"width\"].max()\n",
+    "df[\"height\"] = df[\"height\"] / df[\"height\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.811148</td>\n",
+       "      <td>0.890278</td>\n",
+       "      <td>0.816054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.811148</td>\n",
+       "      <td>0.890278</td>\n",
+       "      <td>0.816054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.822681</td>\n",
+       "      <td>0.909722</td>\n",
+       "      <td>0.876254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.848630</td>\n",
+       "      <td>0.919444</td>\n",
+       "      <td>0.908027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.848630</td>\n",
+       "      <td>0.922222</td>\n",
+       "      <td>0.908027</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     length     width    height\n",
+       "0  0.811148  0.890278  0.816054\n",
+       "1  0.811148  0.890278  0.816054\n",
+       "2  0.822681  0.909722  0.876254\n",
+       "3  0.848630  0.919444  0.908027\n",
+       "4  0.848630  0.922222  0.908027"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"length\", \"width\", \"height\"]].head()"
+   ]
   },
   {
    "cell_type": "code",
