calculated r-squared and mse values

--- a/Module 4 Model Development.ipynb
+++ b/Module 4 Model Development.ipynb
@@ -1924,9 +1924,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13699.11161184, 13699.11161184, 19051.65470233, 10620.36193015,\n",
+       "       15521.31420211, 13869.66673213, 15456.16196732, 15974.00907672,\n",
+       "       17612.35917161, 10722.32509097])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  create a pipeline that Standardizes the data\n",
     "\n",
@@ -1935,7 +1948,15 @@
     "\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "Input = [(\"scale\", StandardScaler()), (\"modle\", LinearRegression())]\n",
+    "\n",
+    "pipe = Pipeline(Input)\n",
+    "\n",
+    "pipe.fit(Z, y)\n",
+    "\n",
+    "ypipe = pipe.predict(Z)\n",
+    "ypipe[0:10]"
    ]
   },
   {
@@ -1972,6 +1993,385 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Measures for In-Sample Evaluation\n",
+    "\n",
+    "#  when evaluating our models\n",
+    "#     - visualize the results\n",
+    "#     - quantitative measure to determine how accurate the model is \n",
+    "\n",
+    "\n",
+    "#  2 measures used in Statistics to determine the accuracy of a model \n",
+    "\n",
+    "#  1)  R^2     R-squared\n",
+    "#  2)  MSE     Mean Squared Error\n",
+    "\n",
+    "\n",
+    "\n",
+    "#  R^2  \n",
+    "#  also known as coefficient of determination, is a measure to indicate how close\n",
+    "#  the data is to the fitted regression line.  \n",
+    "\n",
+    "#  value of R^2 is the percentage of variation of the response variable (y) that is \n",
+    "#  explained by a linear model \n",
+    "\n",
+    "\n",
+    "\n",
+    "#  MSE\n",
+    "#  measures the average of the squares of errors, that is the \n",
+    "#  difference between actual value(y) and the estimated value (yhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Simple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The R-square is:  0.4965911884339175\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  R^2\n",
+    "\n",
+    "#  highway_mpg_fit\n",
+    "lm.fit(X, Y)\n",
+    "\n",
+    "#  find R^2\n",
+    "print(\"The R-square is: \", lm.score(X, Y))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  we can say that 49.65% of the variation of the price is explained by this \n",
+    "#  simple lineaer model \"horsepower_fit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output of the first 4 predicted value is:  [16236.50464347 16236.50464347 17058.23802179 13771.3045085 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  MSE\n",
+    "\n",
+    "#  can predict the output yhat using the predict method, where X is the input variable\n",
+    "\n",
+    "Yhat = lm.predict(X)\n",
+    "\n",
+    "print(\"The output of the first 4 predicted value is: \", Yhat[0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  import the function mean_squared_error\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error of price and predicted value is:  31635042.944639895\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  compare the predicted results with actual results\n",
+    "\n",
+    "mse = mean_squared_error(df[\"price\"], Yhat)\n",
+    "\n",
+    "print(\"Mean Squared Error of price and predicted value is: \", mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Multiple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-square is:  0.8093562806577457\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  R^2\n",
+    "\n",
+    "\n",
+    "# fit the model\n",
+    "lm.fit(Z, df[\"price\"])\n",
+    "\n",
+    "#  find R^2\n",
+    "print(\"R-square is: \", lm.score(Z, df[\"price\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  we can say that 80.9% of the variation of price is explained by this multiple \n",
+    "#  linear regression multi_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error of price and predicted value using multifit is:  11980366.87072649\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MSE\n",
+    "\n",
+    "\n",
+    "# we product a prediction\n",
+    "Y_predict_multifit = lm.predict(Z)\n",
+    "\n",
+    "#  compare the predicted results with the actual results\n",
+    "print(\"Mean Squared Error of price and predicted value using multifit is: \", mean_squared_error(df[\"price\"], Y_predict_multifit))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Polynomial Fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  R^2\n",
+    "\n",
+    "# import the function r2_score\n",
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The R-square value is:  0.674194666390652\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  apply the function to get the value of r^2\n",
+    "\n",
+    "r_squared = r2_score(y, p(x))\n",
+    "\n",
+    "print(\"The R-square value is: \", r_squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  we can say that 67% of the variation of price is explained by this polynomial fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MSE\n",
+    "\n",
+    "mean_squared_error(df[\"price\"], p)"
+   ]
   },
   {
    "cell_type": "code",
