imported clean data and created csv

--- a/Module 5 Model Evaluation and Refinement.ipynb
+++ b/Module 5 Model Evaluation and Refinement.ipynb
@@ -5,21 +5,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  Determine how accurate the predictions made by the models are \n",
+    "\n",
+    "\n",
+    "#  model evaluation\n",
+    "#  over fitting, under fitting, and model selection\n",
+    "#  ridge regression\n",
+    "#  grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import clean data \n",
+    "file = 'https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DA0101EN/module_5_auto.csv'\n",
+    "df = pd.read_csv(file)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.to_c"
+   ]
   },
   {
    "cell_type": "code",
