--- a/Module 5 Model Evaluation and Refinement.ipynb
+++ b/Module 5 Model Evaluation and Refinement.ipynb
@@ -31,11 +31,453 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_c"
+    "df.to_csv(\"module_5_auto.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized-losses</th>\n",
+       "      <th>make</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num-of-doors</th>\n",
+       "      <th>body-style</th>\n",
+       "      <th>drive-wheels</th>\n",
+       "      <th>engine-location</th>\n",
+       "      <th>...</th>\n",
+       "      <th>compression-ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak-rpm</th>\n",
+       "      <th>city-mpg</th>\n",
+       "      <th>highway-mpg</th>\n",
+       "      <th>price</th>\n",
+       "      <th>city-L/100km</th>\n",
+       "      <th>horsepower-binned</th>\n",
+       "      <th>diesel</th>\n",
+       "      <th>gas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13495.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>12.368421</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950.0</td>\n",
+       "      <td>9.791667</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450.0</td>\n",
+       "      <td>13.055556</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Unnamed: 0.1  symboling  normalized-losses         make  \\\n",
+       "0           0             0          3                122  alfa-romero   \n",
+       "1           1             1          3                122  alfa-romero   \n",
+       "2           2             2          1                122  alfa-romero   \n",
+       "3           3             3          2                164         audi   \n",
+       "4           4             4          2                164         audi   \n",
+       "\n",
+       "  aspiration num-of-doors   body-style drive-wheels engine-location  ...  \\\n",
+       "0        std          two  convertible          rwd           front  ...   \n",
+       "1        std          two  convertible          rwd           front  ...   \n",
+       "2        std          two    hatchback          rwd           front  ...   \n",
+       "3        std         four        sedan          fwd           front  ...   \n",
+       "4        std         four        sedan          4wd           front  ...   \n",
+       "\n",
+       "   compression-ratio  horsepower  peak-rpm  city-mpg  highway-mpg    price  \\\n",
+       "0                9.0       111.0    5000.0        21           27  13495.0   \n",
+       "1                9.0       111.0    5000.0        21           27  16500.0   \n",
+       "2                9.0       154.0    5000.0        19           26  16500.0   \n",
+       "3               10.0       102.0    5500.0        24           30  13950.0   \n",
+       "4                8.0       115.0    5500.0        18           22  17450.0   \n",
+       "\n",
+       "  city-L/100km  horsepower-binned diesel  gas  \n",
+       "0    11.190476             Medium      0    1  \n",
+       "1    11.190476             Medium      0    1  \n",
+       "2    12.368421             Medium      0    1  \n",
+       "3     9.791667             Medium      0    1  \n",
+       "4    13.055556             Medium      0    1  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized-losses</th>\n",
+       "      <th>wheel-base</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>curb-weight</th>\n",
+       "      <th>engine-size</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression-ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak-rpm</th>\n",
+       "      <th>city-mpg</th>\n",
+       "      <th>highway-mpg</th>\n",
+       "      <th>price</th>\n",
+       "      <th>city-L/100km</th>\n",
+       "      <th>diesel</th>\n",
+       "      <th>gas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>0.811148</td>\n",
+       "      <td>0.890278</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>2548</td>\n",
+       "      <td>130</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13495.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>0.811148</td>\n",
+       "      <td>0.890278</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>2548</td>\n",
+       "      <td>130</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>0.822681</td>\n",
+       "      <td>0.909722</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>2823</td>\n",
+       "      <td>152</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>12.368421</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>0.848630</td>\n",
+       "      <td>0.919444</td>\n",
+       "      <td>54.3</td>\n",
+       "      <td>2337</td>\n",
+       "      <td>109</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950.0</td>\n",
+       "      <td>9.791667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>0.848630</td>\n",
+       "      <td>0.922222</td>\n",
+       "      <td>54.3</td>\n",
+       "      <td>2824</td>\n",
+       "      <td>136</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450.0</td>\n",
+       "      <td>13.055556</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Unnamed: 0.1  symboling  normalized-losses  wheel-base  \\\n",
+       "0           0             0          3                122        88.6   \n",
+       "1           1             1          3                122        88.6   \n",
+       "2           2             2          1                122        94.5   \n",
+       "3           3             3          2                164        99.8   \n",
+       "4           4             4          2                164        99.4   \n",
+       "\n",
+       "     length     width  height  curb-weight  engine-size  ...  stroke  \\\n",
+       "0  0.811148  0.890278    48.8         2548          130  ...    2.68   \n",
+       "1  0.811148  0.890278    48.8         2548          130  ...    2.68   \n",
+       "2  0.822681  0.909722    52.4         2823          152  ...    3.47   \n",
+       "3  0.848630  0.919444    54.3         2337          109  ...    3.40   \n",
+       "4  0.848630  0.922222    54.3         2824          136  ...    3.40   \n",
+       "\n",
+       "   compression-ratio  horsepower  peak-rpm  city-mpg  highway-mpg    price  \\\n",
+       "0                9.0       111.0    5000.0        21           27  13495.0   \n",
+       "1                9.0       111.0    5000.0        21           27  16500.0   \n",
+       "2                9.0       154.0    5000.0        19           26  16500.0   \n",
+       "3               10.0       102.0    5500.0        24           30  13950.0   \n",
+       "4                8.0       115.0    5500.0        18           22  17450.0   \n",
+       "\n",
+       "   city-L/100km  diesel  gas  \n",
+       "0     11.190476       0    1  \n",
+       "1     11.190476       0    1  \n",
+       "2     12.368421       0    1  \n",
+       "3      9.791667       0    1  \n",
+       "4     13.055556       0    1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  get only numeric data\n",
+    "\n",
+    "df = df._get_numeric_data()\n",
+    "df.head()"
    ]
   },
   {
@@ -57,42 +499,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  import libraries for plotting"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%capture\n",
+    "! pip install ipywidgets"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated since IPython 4.0. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "from IPython.html import widgets\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual"
+   ]
   },
   {
    "cell_type": "code",
